# Mental_health_finetuned_llama

./: ModelFile  README.md  generated_prompt.py  instructionns_data.py  instructions.json  model1data.json  pyproject.toml  syntheticdata.py  train.py
